Tests configuration with JaCoCo and Pitest. The minimum expected coverage for lines, branches and mutation is 90%.